<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="32dp"
    tools:context="com.example.georgelancaster.fittracks.Authentication.NewUserActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/username"
            android:padding="5dip" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/round_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dip" />

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/round_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/retypePassword"
            android:inputType="textPassword"
            android:padding="5dip" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/round_button_login"
            android:onClick="createNewUser"
            android:padding="10dp"
            android:text="@string/signup"
            android:textColor="@color/white">

        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/round_button_login"
            android:onClick="backToLogin"
            android:padding="10dp"
            android:text="@string/returnLogin"
            android:textColor="@color/white">

        </Button>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarNewUser"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:indeterminateTint="@color/loginButton"
        android:visibility="invisible" />

</FrameLayout>
