<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/babyBlue">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/babyBlue"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.georgelancaster.fittracks.Hub.CreateWorkout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_login"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/workoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/WorkoutName"
                    android:inputType="textCapSentences"
                    android:padding="16dp" />

                <Button
                    android:id="@+id/Add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:onClick="add"
                    android:text="@string/AddExercise"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_button"
                    android:onClick="saveWorkout"
                    android:text="@string/SaveWorkout"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/append"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_short_divider"
                android:orientation="vertical"
                android:showDividers="middle"></LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
